2008-01-21  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimpcolorizeconfig.h
	* app/gegl/gimpoperationcolorize.h: add missing type macros.

2008-01-19  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpeditselectiontool.c
	(gimp_edit_selection_tool_motion): Reformat a bit, essentially
	just removed one pointless level of indentation.

2008-01-18  Øyvind Kolås  <pippin@gimp.org>

	Removed copies of GEGL headers from GIMP source, depend on installed
	headers instead. GIMP trunk still depends on GEGL trunk but we're
	moving towards a time when GIMP can depend on a GEGL tarball instead.

	* app/gegl/gegl/gegl-operation-filter.h:
	* app/gegl/gegl/gegl-operation-point-filter.h:
	* app/gegl/gegl/gegl-operation-sink.h:
	* app/gegl/gegl/gegl-operation-source.h:
	* app/gegl/gegl/gegl-operation.h:
	* app/gegl/gegl/gegl-types.h:
	* app/gegl/gegl/: removed.

	* app/gegl/gimpoperationcolorbalance.h:
	* app/gegl/gimpoperationcolorize.h:
	* app/gegl/gimpoperationdesaturate.h:
	* app/gegl/gimpoperationhuesaturation.h:
	* app/gegl/gimpoperationlevels.h:
	* app/gegl/gimpoperationposterize.h:
	* app/gegl/gimpoperationthreshold.h:
	* app/gegl/gimpoperationtilesink.h:
	* app/gegl/gimpoperationtilesource.h: modified path to parent class'
	header file.

2008-01-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/base/lut-funcs.c (equalize_lut_func): Don't 
	equalize the alpha channel.  Fixes bug #510210.
	
2008-01-18  Michael Natterer  <mitch@gimp.org>

	* app/gegl/Makefile.am
	* app/gegl/gegl-types.h
	* app/gegl/gimpcolorizeconfig.[ch]: new config object.

	* app/gegl/gimpoperationcolorize.[ch]: remove all properties and
	add a "config" property.

	* app/tools/gimpcolorizetool.[ch]: port to GimpColorizeConfig, use
	the old Colorize struct only in map().

2008-01-18  Michael Natterer  <mitch@gimp.org>

	* app/gegl/gimplevelsconfig.[ch]: ported the stretch and pick
	functions from base/levels.c.

	* app/tools/gimplevelstool.[ch]: use them instead of the old