@@ -72,6 +72,10 @@ void    gimp_levels_config_adjust_by_colors (GimpLevelsConfig     *config,
                                              const GimpRGB        *gray,
                                              const GimpRGB        *white);
 
+/*  temp cruft  */
+void    gimp_levels_config_to_levels_cruft  (GimpLevelsConfig     *config,
+                                             Levels               *cruft,
+                                             gboolean              is_color);
 
 
 #endif /* __GIMP_LEVELS_CONFIG_H__ */
